// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`mapCoseHeader should map COSE header with content encryption algorithm 1`] = `
Map {
  1 => 1,
  2 => [
    1,
    3,
    -1,
  ],
  3 => "application/cwt",
  -1 => Map {
    -1 => 4,
    -4 => {
      "data": [
        100,
        45,
        112,
        114,
        105,
        118,
        97,
        116,
        101,
        45,
        107,
        101,
        121,
      ],
      "type": "Buffer",
    },
    1 => 1,
    -2 => {
      "data": [
        120,
        45,
        99,
        111,
        111,
        114,
        100,
        105,
        110,
        97,
        116,
        101,
      ],
      "type": "Buffer",
    },
  },
  5 => "iv",
  4 => {
    "data": [
      55,
      57,
      98,
      57,
      99,
      98,
      54,
      100,
      45,
      57,
      52,
      100,
      55,
      45,
      53,
      100,
      50,
      54,
      45,
      97,
      97,
      56,
      99,
      45,
      102,
      57,
      98,
      56,
      99,
      53,
      102,
      52,
      57,
      97,
      56,
      48,
    ],
    "type": "Buffer",
  },
  400 => {
    "data": [
      97,
      55,
      101,
      102,
      101,
      97,
      48,
      48,
      45,
      51,
      49,
      48,
      97,
      45,
      53,
      48,
      102,
      98,
      45,
      57,
      51,
      54,
      102,
      45,
      98,
      102,
      49,
      50,
      97,
      52,
      102,
      99,
      48,
      55,
      57,
      57,
    ],
    "type": "Buffer",
  },
  16 => "application/cwt",
  33 => [
    "certificate1",
    "certificate2",
  ],
  34 => "x5t",
  35 => "https://example.com/certificate",
}
`;

exports[`mapCoseHeader should map COSE header with key management algorithm 1`] = `
Map {
  1 => -25,
  2 => [
    1,
    3,
    -1,
  ],
  3 => "application/cwt",
  -1 => Map {
    -1 => 4,
    -4 => {
      "data": [
        100,
        45,
        112,
        114,
        105,
        118,
        97,
        116,
        101,
        45,
        107,
        101,
        121,
      ],
      "type": "Buffer",
    },
    1 => 1,
    -2 => {
      "data": [
        120,
        45,
        99,
        111,
        111,
        114,
        100,
        105,
        110,
        97,
        116,
        101,
      ],
      "type": "Buffer",
    },
  },
  5 => "iv",
  4 => {
    "data": [
      55,
      57,
      98,
      57,
      99,
      98,
      54,
      100,
      45,
      57,
      52,
      100,
      55,
      45,
      53,
      100,
      50,
      54,
      45,
      97,
      97,
      56,
      99,
      45,
      102,
      57,
      98,
      56,
      99,
      53,
      102,
      52,
      57,
      97,
      56,
      48,
    ],
    "type": "Buffer",
  },
  400 => {
    "data": [
      97,
      55,
      101,
      102,
      101,
      97,
      48,
      48,
      45,
      51,
      49,
      48,
      97,
      45,
      53,
      48,
      102,
      98,
      45,
      57,
      51,
      54,
      102,
      45,
      98,
      102,
      49,
      50,
      97,
      52,
      102,
      99,
      48,
      55,
      57,
      57,
    ],
    "type": "Buffer",
  },
  16 => "application/cwt",
  33 => [
    "certificate1",
    "certificate2",
  ],
  34 => "x5t",
  35 => "https://example.com/certificate",
}
`;
